# jklib

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle.ini  CHANGELOG.md  README.md  TODO.md  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.githooks/: pre-commit
.github/workflows/: publish-package.yml  python-publish.yml  qa-backend.yml  update-python-deps.yml
jklib/: __init__.py  import_test.py
jklib/datascience/: __init__.py  numpy.py  pandas.py
jklib/db/: __init__.py
jklib/dj/: admin.py  decorators.py  emails.py  exceptions.py  files.py  filters.py  images.py  managers.py  models.py  network.py  pagination.py  permissions.py  serializers.py  templates.py  test_runner.py  tests.py  validators.py  viewsets.py
jklib/django/: __init__.py  decorators.py  emails.py  images.py  network.py  utils.py  validators.py
jklib/django/commands/: __init__.py  commands.py  operations.py
jklib/django/db/: __init__.py  admins.py  fields.py  managers.py  models.py  queries.py  tests.py  utils.py  validators.py
jklib/django/db/admins/: __init__.py  cannot_add_mixin.py  cannot_delete_mixin.py  cannot_edit_mixin.py  cannot_view_mixin.py  forbidden_mixin.py  readonly_mixin.py
jklib/django/db/fields/: DateCreatedField.py  NotEmptyCharField.py  __init__.py  active_field.py  date_updated_field.py  foreign_key_cascade.py  foreign_key_null.py  required_char_field.py
jklib/django/db/managers/: __init__.py  no_bulk_create_manager.py
jklib/django/db/models/: ContentModel.py  ModelWithImage.py  __init__.py  life_cycle_mixin.py  with_image_mixin.py
jklib/django/drf/: __init__.py  actions.py  exceptions.py  mixins.py  pagination.py  permissions.py  routers.py  serializers.py  services.py  tests.py  validators.py  viewsets.py  viewsets_backup.py
jklib/django/drf/actions/: Action.py  __init__.py  base_action.py
jklib/django/drf/mixins/: DynamicPermissionsMixin.py  DynamicSerializersMixin.py  ShowAsBrowsableMixin.py  __init__.py  browsable_mixin.py  model_mixin.py
jklib/django/drf/paginations/: BasicPagination.py  __init__.py  basic_pagination.py
jklib/django/drf/permissions/: BlockAll.py  IsNotAuthenticated.py  IsNotVerified.py  IsObjectOwner.py  IsVerified.py  __init__.py  is_not_verified.py  is_object_owner.py  is_verified.py
jklib/django/drf/serializers/: OnlyActiveSerializer.py  __init__.py  not_empty_serializer.py  utils.py
jklib/django/drf/utils/: validators.py
jklib/django/drf/viewsets/: DynamicModelViewSet.py  DynamicViewSet.py  __init__.py  dynamic_model_viewset.py  utils.py
jklib/django/models/: __init__.py  fields.py  managers.py  models.py  queries.py  utils.py
jklib/django/scripts/: __init__.py  security.py  setup.py  translations.py
jklib/django/utils/: __init__.py  decorators.py  emails.py  images.py  network.py  settings.py  templates.py  tests.py  translations.py
jklib/django_utils/: __init__.py
jklib/django_utils/commands/: __init__.py  commands.py  operations.py
jklib/django_utils/db/: __init__.py  admins.py  fields.py  managers.py  models.py  queries.py  tests.py  validators.py
jklib/django_utils/drf/: exceptions.py  pagination.py  permissions.py  routers.py  serializers.py  storage.py  tests.py  viewsets.py
jklib/django_utils/utils/: __init__.py  decorators.py  emails.py  images.py  network.py  settings.py  templates.py  test_runner.py  tests.py  translations.py
jklib/dtsci/: __init__.py  numpy.py  pandas.py
jklib/meili/: search.py  types.py
jklib/meili/dj/: indexer.py  serializers.py  test_utils.py
jklib/standard/: dates.py  decorators.py  emails.py  files.py  inputs.py  json.py  strings.py  transforms.py
jklib/std/: __init__.py  classes.py  dates.py  decorators.py  emails.py  files.py  images.py  inputs.py  json.py  maths.py  strings.py  threads.py  transforms.py
jklib/web/: __init__.py  requests.py  selenium.py  soup.py
