[project]
name = "backend"
version = "5.2.1"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
    "django-filter>=24.3",
    "djangorestframework>=3.15.2",
    "meilisearch>=0.31.5",
    "pillow>=10.4.0",
]

# ------------------------------
# UV
# ------------------------------
[tool.uv]
dev-dependencies = [
    "django-filter-stubs>=0.1.3",
    "django-stubs>=5.1.0",
    "djangorestframework-stubs>=3.15.1",
    "mypy>=1.11.2",
    "ruff>=0.6.7",
    "types-pillow>=10.2.0.20240822",
]

# ------------------------------
# MYPY
# ------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "./jklib"

check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = false
show_column_numbers = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = "attr-defined,import-untyped"

# ------------------------------
# RUFF
# ------------------------------
[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["jklib"]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
