[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jklib"
version = "5.2.1"
description = "Package with utility functions on many different subjects"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jordan Kowal", email = "kowaljordan@gmail.com" }]
keywords = ["utility", "development"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "django>=5.1.1",
    "django-filter>=24.3",
    "djangorestframework>=3.15.2",
    "meilisearch>=0.31.5",
    "pillow>=10.4.0",
]

[project.urls]
homepage = "https://github.com/Jordan-Kowal/jklib"
download = "https://github.com/Jordan-Kowal/jklib/archive/v5.2.1.tar.gz"

# ------------------------------
# Dependencies
# ------------------------------
[tool.uv]
dev-dependencies = [
    "django-filter-stubs>=0.1.3",
    "django-stubs>=5.1.0",
    "djangorestframework-stubs>=3.15.1",
    "mypy>=1.11.2",
    "ruff>=0.6.7",
    "types-pillow>=10.2.0.20240822",
]

# ------------------------------
# MYPY
# ------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "./jklib"

check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = false
show_column_numbers = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = "attr-defined,import-untyped"

# ------------------------------
# RUFF
# ------------------------------
[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["jklib"]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
